Simplify and update documentation